@@ -1,5 +1,11 @@
 mbed TLS ChangeLog (Sorted per branch, date)
 
+= mbed TLS x.x.x branch released xxxx-xx-xx
+
+Bugfix
+   * Fix namespacing in header files. REmove the `mbedtls` namespacing in
+     the `#include` in the header files. Resolves #857
+
 = mbed TLS 2.7.4 branch released 2018-06-18
 
 Bugfix
